--- a/hpt-frontend/src/App.css
+++ b/hpt-frontend/src/App.css
@@ -1,38 +1,14 @@
-.App {
-  text-align: center;
-}
+@import 'antd/dist/antd.css';
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/*
+Color scheme:
+#F9F9F9
+#0D090A
+#D64933
+#85CB33
+#14A76C
+*/
+body {
+    background-color: #F9F9F9;
+    color: #0D090A;
 }
